# eventuals

./: .bazeliskrc  .bazelrc  .clang-format  .clang-tidy  .clangd  .dazelrc  .gitignore  .gitmodules  .isort.cfg  .prettierignore  .prettierrc.json  1.cc  2.cc  BUILD.bazel  Dockerfile.dazel  Makefile  README.md  README_Build.md  README_Install_Linux.md  README_Install_MacOS.md  README_Install_Windows.md  WORKSPACE  WORKSPACE.bazel  client-api.tgn  long_path.ps1  server-api.tgn  server-calls.tgn  test.cc  variables.bzl
bazel-rules-jemalloc/: BUILD.bazel
bazel-rules-jemalloc/bazel/: deps.bzl  repos.bzl
eventuals/: BUILD.bazel  broadcast-pipe.h  builder.h  builder.hh  callback.h  catch.h  catch.hh  closure.h  closure.hh  collect.h  collect.hh  compose.h  compose.hh  concurrent-ordered.h  concurrent-ordered.hh  concurrent.backup.hh  concurrent.h  concurrent.hh  concurrent.ideas.h  conditional.h  conditional.hh  context.h  control-loop.h  control-loop.hh  dns-resolver.h  dns-resolver.hh  do-all.h  do-all.hh  dynamic-thread-pool.h  errors.h  event-loop.cc  event-loop.h  event-loop.hh  eventual.h  eventual.hh  executor.h  executor.hh  expected.h  expected.hh  filesystem.h  (+115 more)
eventuals/grpc/: BUILD.bazel  call-type.h  client.h  client.hh  cluster.h  completion-pool.h  completion-thread-pool.cc  completion-thread-pool.h  completion-thread-pool.hh  handler.h  logging.h  server.cc  server.h  server.hh  traits.h  traits.hh
eventuals/protobuf/: BUILD.bazel  collectors.h  collectors.hh
main/: BUILD  (+3 more)
protoc-gen-eventuals/: BUILD.bazel  protoc-gen-eventuals.py
protoc-gen-eventuals/templates/: BUILD.bazel  eventuals-client.h.j2  eventuals.cc.j2  eventuals.h.j2  eventuals.hh.j2  grpc-method-eventuals.cc.j2
test/: BUILD.bazel  BuildAndStart.cc  CancelledByClient.cc  CancelledByServer.cc  ClientDeathTest.cc  MultipleHosts.cc  ServeValidate.cc  ServerDeathTest.cc  ServerUnavailable.cc  Streaming.cc  Unary.cc  Unimplemented.cc  accept.cc  asio.cc  backward-stacktrace.cc  backward-stacktrace.h  bitwise_operator.cc  broadcast-cancel.cc  build-and-start.cc  callback.cc  cancelled-by-client.cc  cancelled-by-server.cc  catch.cc  choice.cc  client-death-test.cc  closure.cc  cluster.cc  collect.cc  compose.cc  concurrent-downstream-done-both-eventuals-success.cc  concurrent-downstream-done-one-eventual-fail.cc  concurrent-downstream-done-one-eventual-stop.cc  concurrent-emit-fail-interrupt.cc  concurrent-emit-interrupt-fail.cc  concurrent-emit-interrupt-stop.cc  concurrent-emit-stop-interrupt.cc  concurrent-fail-before-start.cc  concurrent-fail-or-stop.cc  concurrent-fail.cc  concurrent-flat-map.cc  (+101 more)
test/concurrent/: BUILD.bazel  concurrent-downstream-done-both-eventuals-success.cc  concurrent-downstream-done-one-eventual-fail.cc  concurrent-downstream-done-one-eventual-stop.cc  concurrent-emit-fail-interrupt.cc  concurrent-emit-interrupt-fail.cc  concurrent-emit-interrupt-stop.cc  concurrent-emit-stop-interrupt.cc  concurrent-fail-before-start.cc  concurrent-fail-or-stop.cc  concurrent-fail.cc  concurrent-flat-map.cc  concurrent-interrupt-fail-or-stop.cc  concurrent-interrupt-fail.cc  concurrent-interrupt-stop.cc  concurrent-interrupt-success.cc  concurrent-moveable.cc  concurrent-stop-before-start.cc  concurrent-stop.cc  concurrent-stream-fail.cc  concurrent-stream-stop.cc  concurrent-success.cc  concurrent-with-timer.cc  concurrent.h  concurrent.hh  downstream-done-both-eventuals-success.cc  downstream-done-one-eventual-fail.cc  downstream-done-one-eventual-stop.cc  emit-fail-interrupt.cc  emit-fail-pipe.cc  emit-interrupt-fail.cc  emit-interrupt-stop.cc  emit-stop-interrupt.cc  emit-stop-pipe.cc  fail-before-start.cc  fail-or-stop.cc  fail.cc  flat-map.cc  interrupt-fail-or-stop.cc  interrupt-fail.cc  (+8 more)
test/eventuals/: broadcast-cancel.cc  build-and-start.cc  cancelled-by-client.cc  cancelled-by-server.cc  client-death-test.cc  cluster.cc  deadline.cc  multiple-hosts.cc  serve-validate.cc  server-death-test.cc  server-unavailable.cc  streaming.cc  unary.cc  unimplemented.cc
test/grpc/: BUILD.bazel  accept.cc  build-and-start.cc  cancelled-by-client-no-finish.cc  cancelled-by-client.cc  cancelled-by-server.cc  client-death-test.cc  client-interruptible.cc  deadline.cc  death-client.cc  death-constants.h  death-server.cc  greeter-server.cc  helloworld.eventuals.cc  helloworld.eventuals.hh  main.cc  multiple-hosts.cc  ordering-dependent-test.h  ordering-dependent-test.hh  sample_service.proto  server-death-test.cc  server-unavailable.cc  streaming.cc  test.h  test.hh  unary.cc  unimplemented.cc
test/grpc/codegen/: BUILD.bazel
test/grpc/route_guide/: BUILD.bazel  get-feature.cc  helper.cc  helper.h  list-features.cc  make.h  record-route.cc  route-chat.cc  route-guide-eventuals-client.h  route-guide-eventuals-server.h  route-guide-eventuals-test.cc  route-guide-eventuals-test.h  route-guide-test.cc  route-guide-test.h  route-guide-utilities.h  route_guide.proto  route_guide_db.json  route_guide_eventuals_server.h  server-client-implementation.cc
test/grpc/streaming/: streaming.cc  streaming.h  write_last_after_reply_two_requests.cc  write_last_before_reply_one_request.cc  write_last_before_reply_two_requests.cc  writes_done_after_reply_one_request.cc  writes_done_after_reply_two_requests.cc  writes_done_before_reply_one_request.cc  writes_done_before_reply_two_requests.cc
test/libuv/: dns-resolver.cc  signal.cc  timer.cc
test/protobuf/: BUILD.bazel  collect.cc  collectors.cc
test/tcp/: BUILD.bazel  tcp-acceptor-accept.cc  tcp-acceptor-bind.cc  tcp-acceptor-listen.cc  tcp-acceptor-open-close.cc  tcp-socket-bind.cc  tcp-socket-connect-winapi.cc  tcp-socket-connect.cc  tcp-socket-open-close.cc  tcp-socket-send-receive-winapi.cc  tcp-socket-send-receive.cc  tcp-socket-shutdown.cc  tcp.h
test/tcp/ipv6/: tcp-acceptor-accept.cc  tcp-acceptor-bind.cc  tcp-acceptor-listen.cc  tcp-acceptor-open-close.cc  tcp-socket-bind.cc  tcp-socket-connect-winapi.cc  tcp-socket-connect.cc  tcp-socket-open-close.cc  tcp-socket-send-receive-winapi.cc  tcp-socket-send-receive.cc  tcp-socket-shutdown.cc  tcp.h
(+141 files in other folders)
