# TODO(alexmc): Remove this alias.
alias(
    name = "eventuals",
    actual = "//eventuals",
    deprecation = "Prefer //eventuals",
    visibility = ["//visibility:public"],
)

# TODO(alexmc): Remove this alias.
alias(
    name = "grpc",
    actual = "//eventuals/grpc",
    deprecation = "Prefer //eventuals/grpc",
    visibility = ["//visibility:public"],
)
