load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

########################################################################

# Hedron's Compile Commands Extractor for Bazel.
# Follow the link to learn how to set it up for your code editor:
# https://github.com/hedronvision/bazel-compile-commands-extractor
# NOTE: This rule is crucial for clangd and clang-tidy to work.
# Its output is used by clangd and clang-tidy to understand the build process.
# TODO(folming): move the rules to a separate bazel file.

refresh_compile_commands(
    name = "refresh_cc",
    # If the rule doesn't work for you, you can set explicitly which
    # targets to extract compile commands from here.
    # The value for keys is meant for additional bazel build arguments, e.g.
    # "//test:eventuals": "--compilation_mode=dbg".
    targets = {
        "...": "",
    },
)

refresh_compile_commands(
    name = "refresh_cc_github_actions",
    targets = {
        "//test:eventuals": "",
    },
)

########################################################################
