workspace(name = "com_github_3rdparty_eventuals")

########################################################################

load("//bazel:submodules.bzl", eventuals_submodules = "submodules")

eventuals_submodules(external = False)

load("//bazel:repos.bzl", eventuals_repos = "repos")

eventuals_repos()

load("//bazel:py_toolchains.bzl", eventuals_py_toolchains = "py_toolchains")

eventuals_py_toolchains()

load("//bazel:pypi_repos.bzl", eventuals_pypi_repos = "pypi_repos")

eventuals_pypi_repos()

load("//bazel:deps.bzl", eventuals_deps = "deps")

eventuals_deps()

load("@com_github_grpc_grpc//bazel:grpc_extra_deps.bzl", "grpc_extra_deps")

grpc_extra_deps()

########################################################################
