load("@rules_foreign_cc//foreign_cc:configure.bzl", "configure_make")

filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

configure_make(
    name = "jemalloc",
    #autoconf = True,
    #configure_in_place = True,
    #env = select({
    #    # Without this option on macOS we will have the following issue:
    #    # .../libtool: no output file specified (specify with -o output).
    #    "@bazel_tools//src/conditions:darwin": {"AR": ""},
    #    "//conditions:default": {},
    #}),
    env = {"AR": ""},
    lib_source = ":all",
    out_static_libs = select({
        "@bazel_tools//src/conditions:windows": [
            "libjemalloc_a.lib",
        ],
        "//conditions:default": ["libjemalloc.a"],
    }),
    visibility = ["//visibility:public"],
)
