load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "protobuf",
    hdrs = [
        "collectors.hh",
    ],
    copts = copts(),
    visibility = ["//visibility:public"],
    deps = [
        "//eventuals",
        "@com_google_protobuf//:protobuf",
    ],
)
