# We build "concurrent" tests in a separate target to significantly speed up
# linking on platforms which prefer shared libraries (e.g., macos).

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "concurrent",
    # We've split all of the tests into separate files so they can be
    # compiled in parallel which is significantly faster than having
    # all of the tests in a single file.
    srcs = glob([
        "*.cc",
        "*.h",
    ]),
    copts = copts(),
    visibility = ["//test:__pkg__"],
    deps = [
        "//eventuals",
        "//test:expect-throw-what",
        "@com_github_google_googletest//:gtest",
        "@com_github_google_googletest//:gtest_main",
    ],
    # Setting it to False or leaving it absent will prevent concurrent
    # tests from running on Windows.
    alwayslink = True,
)
